# StitchManager-3

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codex/commands/: review-code.md  review-task.md
.github/workflows/: release.yml
basic/: dst_format_analysis.md  pes_dst_format_analysis_v2.md  pes_format_analysis.md
basic/test/: 2_info.json  3 Ohren L_info.json  4_info.json  5X7_FollowTheBunnyHeHasChocolate_Fill_info.json  BayrischesHerz_info.json  Blaetter_Puschen_info.json  Bodo_info.json  Boot_info.json  BrezelHerzen_info.json  Diamant_S_info.json  Diamant_info.json  Diamanten_info.json  Donut_info.json  Einhorn_info.json  (+7 more)
design/: design-proposal.md
flatpak/: ci-bundle.yml  de.carpeasrael.stichman.desktop  de.carpeasrael.stichman.metainfo.xml  de.carpeasrael.stichman.yml  generate-sources.sh
release_26.03-a1/: init_01.md  sprint_plan.md
release_26.03-a2/: 00_release_overview.md  backlog_issue_29.md  sprint_10_editing_and_templates.md  sprint_11_history_and_transfer.md  sprint_1_bugs_and_foundations.md  sprint_2_performance_and_backend.md  sprint_3_ux_enhancements.md  sprint_4_core_features.md  sprint_5_extended_features.md  sprint_6_scale.md  sprint_7_pdf_and_closure.md  sprint_8_scale_and_performance.md  sprint_9_format_conversion.md  sprint_status.md
release_26.03-rc1/: release_test_report.md  retest_report.md  sprint_plan.md
release_26.04-a1/: 00_gap_analysis.md  01_sprint_plan.md  02_plan_issues_94_95.md  RELEASE_NOTES.md  claude-functional-report.md  claude-performance-report.md  claude-retest-report.md  claude-security-report.md  codex-functional-report.md  codex-performance-report.md  codex-retest-report.md  codex-security-report.md  cross-validation.md  final-report.md  project.md  requirements_Sewing Pattern Management.md  retest-final-report.md
src/: main.ts  shortcuts.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: ai.rs  audit.rs  backup.rs  batch.rs  convert.rs  edit.rs  files.rs  folders.rs  manufacturing.rs  migration.rs  mod.rs  print.rs  procurement.rs  projects.rs  reports.rs  scanner.rs  settings.rs  smart_folders.rs  statistics.rs  templates.rs  thread_colors.rs  transfer.rs  versions.rs  viewer.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/parsers/: dst.rs  image_parser.rs  jef.rs  mod.rs  pdf.rs  pes.rs  vp3.rs  writers.rs
src-tauri/src/services/: ai_client.rs  file_watcher.rs  mod.rs  pdf_report.rs  stitch_transform.rs  thread_db.rs  thumbnail.rs  usb_monitor.rs
(+487 files in other folders)
