[package]
name = "app_lib"
version = "26.4.1"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
notify = "6"
image = "0.25"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "1"
byteorder = "1"
log = "0.4"
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }
tauri-plugin-opener = "2.5.3"
roxmltree = "0.20"
qrcode = "0.14"
printpdf = "0.7"
lopdf = "0.34"
zip = "8.2.0"
csv = "1.4.0"

[dev-dependencies]
tempfile = "3"
